--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "backend": "json-server db.json --port 5000"
+    "backend": "json-server --watch db.json --port 5000"
   },
   "author": "",
   "license": "ISC",
