--- a/package.json
+++ b/package.json
@@ -4,10 +4,18 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "backend": "json-server --watch db.json --port 5000"
+    "start": "json-server --watch db.json --port 5000"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/souzaiarley/Costs-Back.git"
   },
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/souzaiarley/Costs-Back/issues"
+  },
+  "homepage": "https://github.com/souzaiarley/Costs-Back#readme",
   "description": "",
   "dependencies": {
     "json-server": "^1.0.0-beta.3"
