--- a/package.json
+++ b/package.json
@@ -3,21 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "json-server --watch db.json --port 5000"
+    "start": "json-server --watch db.json --port 5000 --host 0.0.0.0 --no-static"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/souzaiarley/Costs-Back.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/souzaiarley/Costs-Back/issues"
-  },
-  "homepage": "https://github.com/souzaiarley/Costs-Back#readme",
-  "description": "",
   "dependencies": {
-    "json-server": "^1.0.0-beta.3"
+    "json-server": "^0.17.4"
   }
 }
